Added link to my in footer <a> tag

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Patrick Basamot</a>.
+      Coded by <a href="https://github.com/patrickbasamot">Patrick Basamot</a>.
     </p>
   </footer>
   <script src="script.js"></script>
